changes in pom.xml